# rs3-plugin-fleet

./: .env.example  .gitignore  .pre-commit-config.yaml  LEGAL_NOTES.md  Makefile  README.md  pyproject.toml  test_flexis_enricher.py
src/rs3_plugin_fleet/adapters/: core2_adapter_dyn.py  custom_legs_plan.py
src/rs3_plugin_fleet/config/: coin-coin-delivery.yaml  coin-coin-delivery.yaml.bak
src/rs3_plugin_fleet/flexis/: __init__.py  enricher.py  features.py
src/rs3_plugin_fleet/pipeline/: __init__.py  adapter.py  builder.py  patches.py
src/rs3_plugin_fleet/plugin_discovery/: altitude_loader.py
src/rs3_plugin_fleet/report/: flexis_report.py
src/rs3_plugin_fleet/runner/: run_fleet.py
src/rs3_plugin_fleet/stages/: flexis_features.py
src/rs3_plugin_fleet/utils/: __init__.py  ctx_access.py  flexis_export.py  route.py  time_utils.py
tools/: gen_single_yaml.py
