[build-system]
requires = ["hatchling>=1.24.2"]
build-backend = "hatchling.build"

[project]
name = "rs3-plugin-fleet"
version = "0.4.1"
description = "Run one RS3 simulation pipeline per vehicle using a fleet YAML."
readme = "README.md"
license = {file = "LICENSE"}
authors = [{ name = "RoadSimulator3", email = "sebastien.edet@gmail.com" }]
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "pandas>=2.2",
  "pyyaml>=6.0",
  "tqdm>=4.66",
  "astral>=3.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.5.0",
  "mypy>=1.10",
  "pre-commit>=3.7",
]

[project.scripts]
rs3-fleet = "rs3_plugin_fleet.runner.run_fleet:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/rs3_plugin_fleet"]
